--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
