--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -17,9 +18,11 @@
     "eslint-config-next": "13.5.1",
     "jwt-decode": "^3.1.2",
     "next": "13.5.1",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
     "typescript": "5.2.2"
   }
 }
