--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "chart.js": "^4.4.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "jwt-decode": "^3.1.2",
     "next": "13.5.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
